pad: don't try to pretty-print event after we've given away ownership

Might cause crashes with debug logging enabled.

https://bugzilla.gnome.org/show_bug.cgi?id=683996